yamlファイルの更新

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,15 @@ services:
     ports:
       - 3000:3000
 
+  db:
+    image: postgres:13.11
+    container_name: psql
+    ports:
+      - 5432:5432
+    volumes:
+      - db-store:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=Pasona123
 volumes:
-  db-volumes:
+  db-store:
+
