すまないadd.で全更新や

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,22 @@
 version: '3'
 services:
   go:
-    build: .
+    build: ./backend
     tty: true
-    container_name: go
+    container_name: back
     volumes:
       - .:/common_tasks
     ports:
-      - 3000:3000
+      - 8080:8080
+
+  vue:
+    build: ./vue-test-project
+    tty: true
+    container_name: front
+    volumes:
+      - .:/common_tasks
+    ports:
+      - 3001:3001
 
   db:
     image: postgres:13.11
@@ -20,4 +29,3 @@ services:
       - POSTGRES_PASSWORD=Pasona123
 volumes:
   db-store:
-
