--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,14 @@ services:
   db:
     image: postgres:13.11
     container_name: psql
+    restart: always
     ports:
       - 5432:5432
     volumes:
       - db-store:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: sample
-      POSTGRES_USER: stawada
-
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
 volumes:
   db-store:
