--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,8 +5,10 @@ RUN apk update && apk add \
 
 RUN mkdir back_app
 
-WORKDIR /back_app
-
 COPY . /back_app
 
+WORKDIR /back_app/api_server
+
 RUN apk --update add curl
+
+CMD ["go", "run", "api.go", "main.go"]
